[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.39.3", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with="2"
anyhow = "1.0.86"
lazy-regex = "3.3.0"
async-trait = "0.1.81"
strum_macros = "0.26.4"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.1"
